adding background colors

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Wireframe Practice</title>
     <link rel="stylsheet" href="./css/reset.css">
-    <link re="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="grid-container">
+    <div class="header">HEADER</div>
+    <aside class="aside" id="aside1">ASIDE</aside>
+    <div class="column-container">
+        <column class="column" id="column1">COLUMN</column>
+        <column class="column" id="column2">COLUMN</column>
+        <column class="column" id="column3">COLUMN</column>
+        </div>
+    <aside class="aside" id="aside2">ASIDE</aside>
+    <footer class="footer">FOOTER</footer>
+    </div>
 </body>
 </html>
