adding media query

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="grid-container">
+     <div class="grid-container"></div>
     <div class="header">HEADER</div>
-    <aside class="aside" id="aside1">ASIDE</aside>
+        <aside class="aside" id="aside1">ASIDE</aside>
     <div class="column-container">
         <column class="column" id="column1">COLUMN</column>
         <column class="column" id="column2">COLUMN</column>
         <column class="column" id="column3">COLUMN</column>
-        </div>
-    <aside class="aside" id="aside2">ASIDE</aside>
-    <footer class="footer">FOOTER</footer>
     </div>
+    <aside class="aside" id="aside2">ASIDE</aside>
+     <footer class="footer">FOOTER</footer>
+</div>
+    </body>
 </body>
 </html>
